# AIResearchAssistant

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
apps/api/src/: main.py
apps/api/src/api/v1/: chat.py  documents.py
apps/api/src/schemas/: chat.py  document.py
apps/api/src/services/: document_processing_service.py  openai_service.py  pinecone_service.py
apps/api/tests/: test_chat_integration.py
apps/web/: README.md  next.config.js  package.json
apps/web/app/: page.tsx
apps/web/src/components/ui/: Button.tsx
apps/web/src/features/chat/: ChatInput.tsx  ChatWindow.tsx  MessageList.tsx
apps/web/src/lib/: api.ts
apps/web/src/stores/: chatStore.ts
